@@ -504,6 +504,23 @@
                         <version>2.1</version>
                     </plugin>
                 </plugins>
+				<build>
+    <plugins>
+        <!-- Update surefire plugin configuration -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.2.5</version> <!-- Updated version compatible with Java 21 -->
+            <configuration>
+                <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                <forkCount>1</forkCount>
+                <reuseForks>false</reuseForks>
+            </configuration>
+        </plugin>
+        
+        <!-- Keep your existing plugins -->
+    </plugins>
+</build>
             </reporting>
         </profile>
     </profiles>
